--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>HHC Maldives</title>
+</head>
+<body bgcolor="#C6D8D3">
+    <div class="container">
+        <h1 class="logo">Welcome to HHC Maldives</h1>
+     <p align="center"> <img src="logo.png" width="998" height="344" alt=""/></p>
+
+        <p>Follow me on social media to stay updated.</p>
+        <div class="social">
+            <a href="https://www.facebook.com/hhcmaldives" class="facebook"></a>
+            <a href="https://www.instagram.com/hhcmaldives" class="instagram"></a>
+        </div>
+    </div>
+</body>
+</html>
