--- a/index.html
+++ b/index.html
@@ -3,19 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>HHC Maldives</title>
+    <title>Shasti-HHC Physio Clinic</title>
+    <style>
+        body { font-family: Arial, sans-serif; }
+        .container { max-width: 800px; margin: auto; padding: 20px; }
+        h1, h2, h3 { color: #333; }
+        p { color: #666; }
+        a { color: #007bff; text-decoration: none; }
+        a:hover { text-decoration: underline; }
+    </style>
 </head>
-<body bgcolor="#C6D8D3">
+<body>
     <div class="container">
-        <h1 class="logo">Welcome to HHC Maldives</h1>
-     <p align="center"> <img src="logo.png" width="998" height="344" alt=""/></p>
-
-        <p>Follow me on social media to stay updated.</p>
-        <div class="social">
-            <a href="https://www.facebook.com/hhcmaldives" class="facebook"></a>
-            <a href="https://www.instagram.com/hhcmaldives" class="instagram"></a>
-        </div>
+        <h1>Welcome to Hope Health Care Maldives</h1>
+        <p align="center"> <img src="logo.png" width="100%" alt=""/></p>
+        <h2>Bringing Advanced Physiotherapy to the Maldives</h2>
+        <section>
+            <h3>About Us</h3>
+            <p>Shasti Physio Clinic, renowned for its advanced physiotherapy services in Chennai, is proud to partner with HHC Maldives to establish a physiotherapy clinic in the Maldives. Our commitment to quality and safety, combined with HHC's dedication to supplying a range of quality products, ensures unparalleled service to the Maldivian market.</p>
+        </section>
+        <section>
+            <h3>Our Services</h3>
+            <ul>
+                <li><strong>Joint Care – Orthotists</strong>: Expert care for muscle, bone, and joint conditions.</li>
+                <li><strong>Spine Care</strong>: Comprehensive treatment for back and neck pain.</li>
+                <li><strong>Postural Alignment</strong>: Improving balance, stability, strength, and flexibility.</li>
+                <li><strong>Women's Wellness</strong>: Addressing the unique health needs of women.</li>
+                <li><strong>Cupping Therapy</strong>: Safe and regulated therapy for various conditions.</li>
+                <li><strong>Post Traumatic and Post Operative Care</strong>: Specialized programs for recovery.</li>
+            </ul>
+        </section>
+        <section>
+            <h3>Our Team</h3>
+            <p>Meet our team of highly qualified and specialist physiotherapists, led by Dr. Ragunath Manogaran and Dr. Sagunthalai Ragunath, who bring their expertise to the Maldives in collaboration with HHC Maldives.</p>
+        </section>
+        <section>
+            <h3>Community Engagement</h3>
+            <p>Shasti has been actively involved with the Tamil Nadu Physiotherapy and Acupuncture Association since 2009, conducting many free camps in rural areas. This spirit of community service will be at the heart of our operations in the Maldives.</p>
+        </section>
+        <section>
+            <h3>Contact Us</h3>
+            <p><a href="#">Connect with us</a> to learn more about our services or schedule an appointment at our new clinic in the Maldives.</p>
+        </section>
     </div>
 </body>
 </html>
