--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <h2>Bringing Advanced Physiotherapy to the Maldives</h2>
         <section>
             <h3>About Us</h3>
-            <p>Shasti Physio Clinic, renowned for its advanced physiotherapy services in Chennai, is proud to partner with HHC Maldives to establish a physiotherapy clinic in the Maldives. Our commitment to quality and safety, combined with HHC's dedication to supplying a range of quality products, ensures unparalleled service to the Maldivian market.</p>
+            <p>HHC Maldives, with the vision of providing quality healthcare products, is thrilled to introduce Shasti Physio Clinic’s exceptional physiotherapy services to the Maldives. Our collaboration signifies a shared vision of excellence and safety, offering the Maldivian community access to premier physiotherapy care.
+</p>
         </section>
         <section>
             <h3>Our Services</h3>
