--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="MediHub - Medical & Health Template">
+    <meta name="description" content="HOPE HEALTH CARE, Maldives">
 
     <!-- ========== Page Title ========== -->
-    <title>MediHub - Medical & Health Template</title>
+    <title>HOPE HEALTH CARE, Maldives</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -166,10 +166,10 @@
                                 <div class="row">
                                     <div class="col-md-8">
                                         <div class="content">
-                                            <h4 data-animation="animated fadeInUp">Best Service Good health</h4>
-                                            <h1 data-animation="animated fadeInDown">Best care for your <span>health</span></h1>
+                                            <h4 data-animation="animated fadeInUp">Collaborated with Shasthi Physio Clinic, India</h4>
+                                            <h1 data-animation="animated fadeInDown">Collaborated with <span>Shasthi Physio Clinic</span></h1>
                                             <p data-animation="animated slideInUp">
-                                                The ourselves suffering the sincerity. Inhabit her manners adapted age certain.<br> Debating offended at branched striking be subjects.
+                                             Shasti Physio Clinics are a chain of physiotherapy clinics that have been conceived and designed by Shasti Physio Clinic Group, for patient who need basic and advanced physiotherapy treatment.
                                             </p>
                                             <a data-animation="animated slideInUp" class="btn btn-light border btn-md" href="#">View Details</a>
                                         </div>
@@ -295,7 +295,7 @@
                     <div class="site-heading text-center">
                         <h2>Centres of <span>Excellence</span></h2>
                         <p>
-                            While mirth large of on front. Ye he greater related adapted proceed entered an. Through it examine express promise no. Past add size game cold girl off how old
+                           We specialize in providing comprehensive physiotherapy services tailored to your unique needs. Our areas of expertise include:
                         </p>
                     </div>
                 </div>
