--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
     <div class="chose-us-area">
         <div class="container-full">
             <div class="row">
-                <div class="col-md-6 thumb bg-cover" style="background-image: url(assets/img/2440x1578_2.png);"></div>
+                <div class="col-md-6 thumb bg-cover" style="background-image: url(assets/img/2440x1578_side.png);"></div>
                 <div class="col-md-6 info">
                     <div class="heading">
                         <h2>Why Choose us</h2>
