--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                     <div class="col-md-4 equal-height">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x600.png" alt="Thumb">
+                                <img src="assets/img/meenakshi.png" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-plus"></i></a>
                                 </div>
@@ -647,7 +647,7 @@
                     <div class="col-md-4 equal-height">
                         <div class="item">
                             <div class="thumb">
-                                <img src="assets/img/800x600.png" alt="Thumb">
+                                <img src="assets/img/kavya.png" alt="Thumb">
                                 <div class="overlay">
                                     <a href="#"><i class="fas fa-plus"></i></a>
                                 </div>
