--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
                             </div>
                             <div class="info">
                                 <h4>Ragunath Manogaran</h4>
-                                <h5>Physiotherapist / Consultant</h5>
+                                <h5>M.P.T(Sports),MD(Acu),M.I.A.P, F.I.Ac.A,BLS(AHA),CDN, K-Taping (Germany), IASTM(GreeCE), M.D.T.I(Aus)</h5>
                                 <div class="appoinment-btn">
                                     <a href="#">Make Online appoinment</a>
                                 </div>
@@ -523,7 +523,7 @@
                             </div>
                             <div class="info">
                                 <h4>Sagunthalai Ragunath</h4>
-                                <h5>Physiotherapist / Consultant</h5>
+                                <h5>B.P.T, MD (ACU), F.I.AC.A, CDNT, K-TAPING, M.D.T.(AUS), ERGON-IASTM(GREECE)&nbsp;</h5>
                                 <div class="appoinment-btn">
                                     <a href="#">Make Online appoinment</a>
                                 </div>
