--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             <!-- Wrapper for slides -->
             <div class="carousel-inner text-light carousel-zoom">
                 <div class="item active">
-                    <div class="slider-thumb bg-cover" style="background-image: url(assets/img/2440x1578_1.png);"></div>
+                    <div class="slider-thumb bg-cover" style="background-image: url(assets/img/2440x1578_1a.png);"></div>
                     <div class="box-table shadow dark">
                         <div class="box-cell">
                             <div class="container">
