--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                             <h4 data-animation="animated fadeInUp">Best Service Good health</h4>
                                             <h1 data-animation="animated fadeInDown">Special for <span>Physiotherapy</span> services</h1>
                                             <p data-animation="animated slideInUp">
-                                                Experience unparalleled care with our best-in-class physiotherapy services, designed to enhance your health and well-being. Our expert team is dedicated to providing personalized treatment plans to ensure optimal recovery and lasting results
+                                                Unparalleled care with our best-in-class physiotherapy services, designed to enhance your health and well-being. Our expert team is dedicated to providing personalized treatment plans to ensure optimal recovery and lasting results
                                             </p>
                                           
                                         </div>
@@ -204,7 +204,7 @@
                                             <h4 data-animation="animated fadeInUp">Care at your homes</h4>
                                             <h1 data-animation="animated fadeInDown">Experience our <span>Home Visit</span> service</h1>
                                             <p data-animation="animated slideInUp">
-                                                The ourselves suffering the sincerity. Inhabit her manners adapted age certain.<br> Debating offended at branched striking be subjects.
+                                                Experience personalized physiotherapy at home with our Hope Visit Service. Our team brings expert care to your doorstep, helping you recover and manage pain comfortably and conveniently.
                                             </p>
                                         
                                         </div>
