--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
                                     <i class="fas fa-clock"></i>
                                 </div>
                                 <div class="info">
-                                    Saturday - Thursday 08:00-19:00 hrs<br>
-                                    Friday 14:00 - 22:00 hrs
-                              </div> 
+                                    Saturday - Thursday: 08:00-22:00 hrs<br>
+                                  Friday: 14:00 - 22:00 hrs
+                            </div> 
                             </li>
                         </ul>
                     </div>
@@ -89,7 +89,7 @@
                         </li>
 
                         <li>
-                            <a href="www.facebook.com/hhc.maldives"><i class="fab fa-instagram"></i></a>
+                            <a href="www.instagram.com/hhc.maldives"><i class="fab fa-instagram"></i></a>
                         </li>
 
                     </ul>
@@ -160,7 +160,7 @@
                                     <div class="col-md-8">
                                         <div class="content">
                                             <h4 data-animation="animated fadeInUp">International Presence</h4>
-                                            <h1 data-animation="animated fadeInDown">Collaborated with <span>Shasthi Physio Clinic</span></h1>
+                                            <h1 data-animation="animated fadeInDown">Collaborated with <span>Shasti Physio Clinic</span></h1>
                                             <p data-animation="animated slideInUp">
                                              Shasti Physio Clinics are a chain of physiotherapy clinics that have been conceived and designed by Shasti Physio Clinic Group, for patient who need basic and advanced physiotherapy treatment.
                                             </p>
@@ -181,7 +181,7 @@
                                     <div class="col-md-8">
                                         <div class="content">
                                             <h4 data-animation="animated fadeInUp">Best Service Good health</h4>
-                                            <h1 data-animation="animated fadeInDown">Special for <span>Physiotherapy</span> services</h1>
+                                            <h1 data-animation="animated fadeInDown">Special for <span>Advanced ain Relief, Neuro Rehabilitation and Sport</span> services</h1>
                                             <p data-animation="animated slideInUp">
                                                 Unparalleled care with our best-in-class physiotherapy services, designed to enhance your health and well-being. Our expert team is dedicated to providing personalized treatment plans to ensure optimal recovery and lasting results
                                             </p>
@@ -252,7 +252,7 @@
                             <div class="info">
                                 <h4>Comprehensive Services</h4>
                                 <p>
-                                  From manual therapy and exercise prescription to specialized modalities, our clinic offers a wide range of services. Whether you need post-operative rehabilitation, sports injury management, or preventive care, we’ve got you covered. Our holistic approach ensures that we address both the symptoms and underlying causes. 
+                                  Our holistic approach ensures that we address both the symptoms and underlying causes. from  manual therapy,  exercise prescription, advanced taping, acupuncture to specialized modalities, our clinic offers a wide range of services. Whether you need post-operative rehabilitation, sports injury management, neuro rehabilitation for your kids and elders or preventive care, we’ve got you covered. 
                               </p>
                             </div>
                         </li>
@@ -268,7 +268,7 @@
                             <div class="info">
                                 <h4>Positive Results</h4>
                                 <p>
-                                  We are partnered with Shasthi Physio Clinic in Chennai, India. The track record speaks for itself. Many of our patients have experienced significant improvements in pain reduction, mobility, and overall quality of life. We’re proud to be a part of their success stories. 
+                                  We are partnered with Shasti Physio Clinic in Chennai, India. The track record speaks for itself. Many of our patients have experienced significant improvements in pain reduction, mobility, and overall quality of life through Advanced Non-Surgical treatment. We’re proud to be a part of their success stories. 
                               </p>
                             </div>
                         </li>
@@ -454,7 +454,7 @@
                     <div class="site-heading text-center">
                         <h2>Meet Our <span>Specialists</span></h2>
                         <p>
-                            While mirth large of on front. Ye he greater related adapted proceed entered an. Through it examine express promise no. Past add size game cold girl off how old
+                            Each one of our Caring experts in various specialised department of Physiotherapy are available for you in HOPE HEALTH CARE. Our team of Specialist.
                         </p>
                     </div>
                 </div>
@@ -698,7 +698,7 @@
                         <div class="item">
                             <div class="content">
                                 <p>
-                                    Departure so attention pronounce satisfied daughters am. But shy tedious pressed studied opinion entered windows off. Advantage dependent suspicion convinced provision him yet. Mr immediate remaining conveying allowance do or. 
+                                    I am very pleased with the results and I have recommended your services to many friends. I also plan to come in in the future for consultation.
                                 </p>
                             </div>
                             <div class="provider">
@@ -706,7 +706,7 @@
                                     <img src="assets/img/800x800.png" alt="Thumb">
                                 </div>
                                 <div class="info">
-                                    <h4>Angle Natasha</h4>
+                                    <h4>Master Daniel</h4>
                                     <h5>patient of <span>surgery</span></h5>
                                 </div>
                             </div>
