--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
                                 <div class="social">
                                     <ul>
                                         <li class="facebook">
-                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.facebook.com/ragunath.manogaran"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li class="twitter">
                                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -507,7 +507,7 @@
                                 <div class="social">
                                     <ul>
                                         <li class="facebook">
-                                            <a href="#"><i class="fab fa-facebook-f"></i></a>
+                                            <a href="https://www.facebook.com/sagunthalai.ragunath.12"><i class="fab fa-facebook-f"></i></a>
                                         </li>
                                         <li class="twitter">
                                             <a href="#"><i class="fab fa-twitter"></i></a>
@@ -706,7 +706,7 @@
                                     <img src="assets/img/800x800.png" alt="Thumb">
                                 </div>
                                 <div class="info">
-                                    <h4>Master Daniel</h4>
+                                    <h4>Daniel</h4>
                                     <h5>patient of <span>surgery</span></h5>
                                 </div>
                             </div>
@@ -716,7 +716,7 @@
                         <div class="item">
                             <div class="content">
                                 <p>
-                                    Departure so attention pronounce satisfied daughters am. But shy tedious pressed studied opinion entered windows off. Advantage dependent suspicion convinced provision him yet. Mr immediate remaining conveying allowance do or. 
+                                    Who has been suffering with Knee and ankle pain because of Repetitive Strain on muscles due to his practice. He undergone Advance therapy like Kinesiology Tape and Muscle release with IASTM. He felt more flexible after the treatment. Helped a lot to perform in the tournament.
                                 </p>
                             </div>
                             <div class="provider">
@@ -724,8 +724,8 @@
                                     <img src="assets/img/800x800.png" alt="Thumb">
                                 </div>
                                 <div class="info">
-                                    <h4>John Abraham</h4>
-                                    <h5>Dental <span>patients</span></h5>
+                                    <h4>Yasin</h4>
+                                    <h5>National Surfing <span>Athlete</span></h5>
                                 </div>
                             </div>
                         </div>
@@ -734,7 +734,7 @@
                         <div class="item">
                             <div class="content">
                                 <p>
-                                    Departure so attention pronounce satisfied daughters am. But shy tedious pressed studied opinion entered windows off. Advantage dependent suspicion convinced provision him yet. Mr immediate remaining conveying allowance do or. 
+                                    I have been suffering from scoliosis for about 9 years. I had chronic pain when i came here. Before i was not able to stand for too long nor walk. This is not the case anymore. In just 7 sessions & with some exercises, my back was so much better in such a shorter time. My physio was friendly & professional. I would highly recommend this place to anyone 💪🏻
                                 </p>
                             </div>
                             <div class="provider">
@@ -742,8 +742,8 @@
                                     <img src="assets/img/800x800.png" alt="Thumb">
                                 </div>
                                 <div class="info">
-                                    <h4>Kriti Sairi</h4>
-                                    <h5>patient of <span>surgery</span></h5>
+                                    <h4>Fathimath</h4>
+                                    <h5>patient of <span>Scoliosis</span></h5>
                                 </div>
                             </div>
                         </div>
@@ -776,10 +776,10 @@
                                 <h5>Opening Hours</h5>
                                 <ul>
                                     <li> <span> Sat - Thurs :  </span>
-                                      <div class="pull-right"> 9.00 am - 10.00 pm </div>
+                                      <div class="pull-right"> 8.00 am - 10.00 pm </div>
                                     </li>
                                     <li> <span> Fri :</span>
-                                      <div class="pull-right"> 4.00 pm - 10.00 pm </div>
+                                      <div class="pull-right"> 2.00 pm - 10.00 pm </div>
                                     </li>
                                     <li>
 
