--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                         <li>
                             <a href="www.facebook.com/hhcmv"><i class="fab fa-facebook-f"></i></a>
                         </li>
-
+                        <li>
+                            <a href="https://www.youtube.com/@HHC_MALDIVES"><i class="fab fa-youtube"></i></a>
+                        </li>
                         <li>
                             <a href="www.instagram.com/hhc.maldives"><i class="fab fa-instagram"></i></a>
                         </li>
