--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                     <div class="col-md-8">
                                         <div class="content">
                                             <h4 data-animation="animated fadeInUp">Best Service Good health</h4>
-                                            <h1 data-animation="animated fadeInDown">Special for <span>Advanced ain Relief, Neuro Rehabilitation and Sport</span> services</h1>
+                                            <h1 data-animation="animated fadeInDown">Special for <span>Advanced Pain Relief, Neuro Rehabilitation and Sport</span> services</h1>
                                             <p data-animation="animated slideInUp">
                                                 Unparalleled care with our best-in-class physiotherapy services, designed to enhance your health and well-being. Our expert team is dedicated to providing personalized treatment plans to ensure optimal recovery and lasting results
                                             </p>
